En caso de agregar 2 body, el navegador los unifica

--- a/braian.html
+++ b/braian.html
@@ -3,10 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!--Para adaptar el contenido a pantalla de celulares-->
+    <meta name="author" content="Braian Mena"> <!--Agrego el autor del archivo html-->
+    <title>Brayano</title>
 </head>
+<body><!--Aquí el contenido que SE VA A MOSTRAR en nuestra página-->
+    <h1>hola</h1>
+</body>
 <body>
-    
+    <h1>hola mundo</h1>
 </body>
 </html>
