--- a/braian.html
+++ b/braian.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> <!--esto es un comentario-->
+<!DOCTYPE html> <!--comentario-->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -8,9 +8,13 @@
     <title>Brayano</title>
 </head>
 <body><!--Aquí el contenido que SE VA A MOSTRAR en nuestra página-->
-    <h1>hola</h1>
-</body>
-<body>
-    <h1>hola mundo</h1>
+    <main>
+        <h1>Curso Full Stack</h1>  <!--con ctrl+d puedo seleccionar varios items-->
+        <h2>Curso Full Stack</h2>
+        <h3>Curso Full Stack</h3>
+        <h4>Curso Full Stack</h4>
+        <h5>Curso Full Stack</h5>
+        <h6>Curso Full Stack</h6>
+    </main>
 </body>
 </html>
