Avance mas trucos

--- a/braian.html
+++ b/braian.html
@@ -8,13 +8,30 @@
     <title>Brayano</title>
 </head>
 <body><!--Aquí el contenido que SE VA A MOSTRAR en nuestra página-->
-    <main>
+    <header>
         <h1>Curso Full Stack</h1>  <!--con ctrl+d puedo seleccionar varios items-->
-        <h2>Curso Full Stack</h2>
-        <h3>Curso Full Stack</h3>
-        <h4>Curso Full Stack</h4>
-        <h5>Curso Full Stack</h5>
-        <h6>Curso Full Stack</h6>
+        <nav>
+            <p>Facebook</p>
+            <p>Instagram</p>
+            <p>Twitter</p>
+        </nav>
+    </header>
+    <main>
+        <section>
+            <article>
+                <h1>Titulo de articulo</h1>
+            </article>
+        </section>
+        <div>
+            <h2>Curso FS</h2><!--Con Alt+'flecha arriba', podes mover el fragmento que se desee y hasta se va autoidentando-->
+            <h3>Curso FS</h3><!--Con Ctrl+D puedo elegir la cantidad de elementos iguales que deseo editar-->
+            <h4>Curso FS</h4>
+            <h5>Curso FS</h5>
+            <h6>Curso FS</h6>
+        </div>
     </main>
+    <footer>
+        &copy;Copyright 2022 BM  &alpha;
+    </footer>
 </body>
 </html>
