--- a/cv.html
+++ b/cv.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <h1>Braian Alexaqnder MENA</h1>
+        <h1>Braian Alexander MENA</h1>
         <nav> <!--Define el sector de navegacion de la pagina-->
             <h2>Redes Sociales:</h2>
             <ol>
@@ -30,8 +30,10 @@
         <section>
             <h2>PRESENTACION</h2>
             <article>
-                Me considero una persona responsable, ordenada y con muchas ganas de aprender.
-                Buscando sumar experiencia y conocimientos a mi primera experiencia laboral.
+                <img src="./assets/FotoCV.jpeg" alt="">
+                <p>
+                    Me considero una persona responsable, ordenada y con muchas ganas de aprender. Buscando sumar experiencia y conocimientos a mi primera experiencia laboral.
+                </p>
             </article>
         </section>
         <section>
@@ -66,7 +68,7 @@
                 <ul>
                     <li>Redes de Computadoras.</li>
                     <li>Fundamentos de Telecomunicaciones.</li>
-                    <li>Arquitectura de protocolos TCP/IP</li>
+                    <li>Arquitectura de protocolos de comunicacion TCP/IP</li>
                     <li>Manejo y adaptabilidad a herramientas software.</li>
                     <li>Diseño y especificacion de productos software.</li>
                     <li>Procesador de texto, hoja de cálculos y presentación de Diapositivas.</li>
@@ -93,7 +95,22 @@
             </article>
             <article>
                 <h3>SOBRE MÍ</h3>
-                <p>En mi tiempo libre me gusta practicar deportes o aprender de temas que, ya sean que sirvan como complemento a mis estudios o satisfagan alguna que otra inquietud de cualquier ámbito que desconozca.</p>
+                <p>
+                    <span>Nombre completo:</span> Braian Alexander
+                </p>
+                <p>
+                    <span>Apellido:</span> MENA
+                </p>
+                <p>
+                    <span>Edad:</span> 25 años 
+                </p>
+                <p>
+                    <span>Nacionalidad:</span> Argentino 🇦🇷
+                </p>
+                <p>
+                    <span>Estado Civil:</span> Soltero &#128374;
+                </p>
+                <p>En mi tiempo libre me gusta practicar deportes o aprender de temas que sirvan como complemento a mis estudios o satisfagan alguna que otra inquietud de cualquier ámbito que desconozca.</p>
             </article>
         </section>
         <section>
