--- a/cv.html
+++ b/cv.html
@@ -48,20 +48,27 @@
         <section>
             <h2>EDUCACIÓN</h2>
             <article>
-                <h3>FORMACIÓN</h3>
-                <ul>
-                    <li>
-                        <span>Secundaria:</span>
-                        Técnico en Equipos e Instalaciones Electromecánicas 
-                        &#8982; E.P.E.T. N°5: 2011-2016
-
-                    </li>
-                    <li>
-                        <span>Carrera de Grado:</span>
-                        Ingeniero en Computacion
-                        &#8982; UNT: 2017-Presente
-                    </li>
-                </ul>
+                <h3>ESTUDIOS</h3>
+                <table>
+                    <tr>
+                        <th>Formacion</th>
+                        <th>Título</th>
+                        <th>Institución</th>
+                        <th>Período</th>
+                    </tr>
+                    <tr>
+                        <td>Secundaria</td>
+                        <td>Técnico en Equipos e Instalaciones Electromecánicas </td>
+                        <td>E.P.E.T. N°5</td>
+                        <td>2011-2016</td>
+                    </tr>
+                    <tr>
+                        <td>Carrera de Grado</td>
+                        <td>Ingeniero en Computacion</td>
+                        <td>FACET - UNT</td>
+                        <td>2017-Presente</td>
+                    </tr>
+                </table>
             </article>
             <article>
                 <h3>CONOCIMIENTOS</h3>
