--- a/braian.html
+++ b/braian.html
@@ -125,6 +125,39 @@
                 </tr>
             </table>
         </section>
+        <form action=""> <!--'action' se usa para BackEnd en PHP. Es el script en PHP que se va a aejecutar-->
+            <div>
+                <label for="apellido">Ingrese su apellido:</label>
+                <input type="text" id="apellido" name="apellido" placeholder="EJ: Rockerfeller"> <!--'placeholder' para marca de agua dentro la casilla-->
+            </div>
+            <div>
+                <span>Estado Civil:</span>
+                <input type="radio" name="estadoCivil" id="soltero" value="soltero">Soltero <!--para que las 3 entradas se agrupen en el mismo campo-> y sepermita seleccionar solo uno, uso un mismo 'name' para todos-->
+                <input type="radio" name="estadoCivil" id="casado" value="casado">Casado <!--con 'value' indicamos lo que se envia en el formulario con SUBMIT-->
+                <input type="radio" name="estadoCivil" id="divorciado" value="divorciado">Divorciado
+                <input type="radio" name="otro" id="fruta">Manzana
+            </div>
+            <div>
+                <span>Lista de Compras:</span><br> <!--'br' para agregar salto de linea(obsoleto su uso, ya que se implementa con CSS)-->
+                <input type="checkbox" name="compras" id="lec" value="lechuga"><label for="lec">Lechuga</label> <br>
+                <input type="checkbox" name="compras" id="tom" value="tomate">Tomate <br>
+                <input type="checkbox" name="compras" id="ceb" value="cebolla">Cebolla
+            </div>
+            <div>
+                <input type="submit" value="Enviar datos"><!--ejecuta la accion que le estoy diciendo en 'action' del form-->
+            </div>
+            <div>
+                <input type="button" value="Click Aquí"><!--con javascript le asigno un comportamiento a este boton-->
+                <button>Click Aquí</button><!--esta es solo una etiqueta, pero hace un submit-->
+                <button type="button"><!--ya no hace un submit-->
+                    <h1>Click</h1><!--al tener etiq de apert y cierre, puedo poner lo que desee a dentro-->
+                    <p>Aquí</p>
+                </button>
+                <input type="color" name="" id="">
+                <input type="date" name="" id="">
+                <input type="password" name="" id="">
+            </div>
+        </form>
     </main>
     <footer>
         &copy;Copyright 2022 BM  &alpha;
