--- a/braian.html
+++ b/braian.html
@@ -72,7 +72,7 @@
             <p>HoLa</p>
         </div>
         <div class="caja">
-            <p>HolA</p>
+            <img src="./assets/FotoCV.jpeg" alt="braian">
         </div>
         <div class="primero">
             <h1 style="font-size: 12px; color: aquamarine;">Braian Mena</h1> <!--regla 'inline' de css-->
