Clase 4-CSS: primera parte-> agregado de mas estilos-> centrado de imagen

--- a/cv.html
+++ b/cv.html
@@ -32,7 +32,9 @@
     </header>
     <main>
         <section class="presentacion">
-            <img src="./assets/FotoCV.jpeg" alt="">
+            <div class="presentacion__foto">
+                <img src="./assets/FotoCV.jpeg" alt=""id="presentacion__foto">
+            </div>
             <h2>PRESENTACION</h2>
             <article>
                 <p>
