Clase 4: posicionamiento hasta grid-> agregado de archivos braian2.html y estilosBraian2.css. Tmb se modificaron archivos previos

--- a/braian.html
+++ b/braian.html
@@ -55,21 +55,38 @@
         </nav>
     </header>
     <main>
-        <p>Hola sin EM</p>
+        <h2>Hola sin EM</h2>
         <p class="caja__doble">Hola</p>
-        <div class="caja">
-            <p>HOLA</p>
-            <p>HOLA</p>
-            <p>HOLA</p>
+        <p class="caja__doble">Hola</p>
+        <p class="caja__doble">Hola</p>
+        <div class="boeri">
+            <p class="caja__doble">Hola</p>
+            <p class="caja__doble">Hola</p>
+            <p class="caja__doble">Hola</p>
+            <p class="caja__doble">Hola</p>
+        </div>
+        <div class="boeri">
+            <div>
+                <p class="caja__doble">Hola</p>
+                <p class="caja__doble">Hola</p>
+                <p class="caja__doble">Hola</p>
+                <p class="caja__doble">Hola</p>
+            </div>
+        </div>
+        <div class="caja caja1">
+            <p>Caja 1</p>
             <!--comentario<div class="caja__interna"> "se la saca para ver el modelo de cajas"
                 
             </div> -->
         </div>
-        <div class="caja">
-            <p>hOLA</p>
+        <div class="caja caja2">
+            <p>Caja 2</p>
         </div>
-        <div class="caja">
-            <p>HoLa</p>
+        <div class="caja caja3">
+            <p>Caja 3</p>
+        </div>
+        <div class="caja caja4">
+            <p>Caja 4</p>
         </div>
         <div class="caja">
             <img src="./assets/FotoCV.jpeg" alt="braian">
@@ -81,8 +98,10 @@
             <h2 id="tercertitulo" class="segundo" style="background-color: rgba(39, 83, 228, 0.774);">Hola Mundo3</h2>
             <h3>Prueba de css con archivo independiente</h3>
             <p>Parrafo</p>
-            <a href="http://www.google.com">Google</a>
+            <a href="http://www.google.com" target="_blank">Google</a>
+            <a href="http://www.youtube.com">Youtube</a>
         </div>
+        <input type="text" disabled>
         <section>
             <article>
                 <h1>Titulo de articulo</h1>
@@ -199,6 +218,21 @@
                 <input type="password" name="" id="">
             </div>
         </form>
+        <!--Clase 4-parte:Posicionamiento-->
+        <div>
+            <div class="caja caja1">
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Itaque aliquam cumque laboriosam facilis? Perspiciatis dolore eaque iste dignissimos ut quaerat recusandae, illum, sequi similique omnis, sed nam voluptates sapiente qui. lo</p>
+            </div>
+            <div class="caja caja2">
+                <p>Caja 2</p>
+            </div>
+            <div class="caja caja3">
+                <p>Caja 3</p>
+            </div>
+            <div class="caja caja4">
+                <p>Caja 4</p>
+            </div>
+        </div>
     </main>
     <footer>
         &copy;Copyright 2022 BM  &alpha;
