Clase 4: posicionamiento hasta grid-> agregado de archivos braian2.html y estilosBraian2.css. V2.0

--- a/braian2.html
+++ b/braian2.html
@@ -24,20 +24,26 @@
             <div class="caja caja4">
                 Caja 4
             </div>
-            <div class="caja caja1">
+            <div class="caja caja5">
                 Caja 5
             </div>
-            <div class="caja caja2">
+            <div class="caja caja6">
                 Caja 6
             </div>
-            <div class="caja caja3">
+            <div class="caja caja7">
                 Caja 7
             </div>
-            <div class="caja caja4">
+            <div class="caja caja8">
                 Caja 8
             </div>
-            <div class="caja caja4">
+            <div class="caja caja9">
                 Caja 9
+            </div>
+            <div class="caja caja10">
+                Caja 10
+            </div>
+            <div class="caja caja11">
+                Caja 11
             </div>
         </div>
     </main>
